# CLink

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  require.md  rev.md  to_updata.md
client/include/clink/core/: application.hpp  ipc.hpp  module.hpp
client/include/clink/core/config/: configuration.hpp
client/include/clink/core/logging/: config.hpp  logger.hpp
client/include/clink/core/network/: packet.hpp
client/include/clink/core/utils/: terminal.hpp
client/modules/process_inject/: CMakeLists.txt
client/modules/process_inject/include/: ipc_protocol.hpp
client/modules/process_inject/src/: dll_main.cpp
client/resources/: clink-cli.rc
client/src/: application.cpp  ipc.cpp  main.cpp
client/src/config/: configuration.cpp
client/src/logging/: config.cpp  logger.cpp
client/src/modules/: registry.cpp
client/src/network/: packet.cpp  tls_adapter.cpp
cmake/: ProjectOptions.cmake
config/: clink.sample.toml
docs/: architecture.md  next_steps.md  performance_report.md  stability_report.md
server/include/clink/core/: application.hpp  ipc.hpp  module.hpp  registry.hpp
server/include/clink/core/config/: configuration.hpp
server/include/clink/core/logging/: logger.hpp
server/include/clink/core/memory/: buffer_pool.hpp
server/include/clink/core/network/: acl.hpp  packet.hpp  rate_limiter.hpp  reliability_engine.hpp  session_manager.hpp  session_manager_impl.hpp  tcp_adapter.hpp  tls_adapter.hpp  transport_adapter.hpp  transport_listener.hpp  virtual_interface.hpp
server/include/clink/core/observability/: telemetry.hpp
server/include/clink/core/policy/: engine.hpp
server/include/clink/core/security/: auth.hpp  dpapi_helper.hpp  psk_provider.hpp  windows_store.hpp
server/include/clink/server/modules/: heartbeat.hpp  ipc_proxy_session.hpp  metrics.hpp  process_manager.hpp  socks_server.hpp
server/modules/process_inject/: CMakeLists.txt
server/modules/process_inject/include/: hook_manager.hpp  process_ipc_server.hpp
server/modules/process_inject/src/: dll_main.cpp  hook_manager.cpp  injector_main.cpp  process_ipc_server.cpp
server/resources/: clink-server.rc
server/src/: application.cpp  ipc.cpp  main.cpp
server/src/config/: configuration.cpp
server/src/logging/: config.cpp  logger.cpp
server/src/modules/: heartbeat.cpp  metrics.cpp  process_manager.cpp  registry.cpp  socks_server.cpp
server/src/network/: acl.cpp  packet.cpp  rate_limiter.cpp  reliability_engine.cpp  session_manager.cpp  tcp_adapter.cpp  tls_adapter.cpp  virtual_interface.cpp
server/src/observability/: telemetry.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/logging/: config_test.cpp  logger_test.cpp
tests/network/: reliability_test.cpp  session_manager_test.cpp  tcp_framing_test.cpp  tls_adapter_test.cpp  zero_copy_test.cpp
tests/performance/: log_performance_test.cpp  tls_stress_test.cpp
tests/server/: dll_integration_test.cpp  ipc_proxy_test.cpp  socks_server_test.cpp
